newyork dataset and files

--- a/USE_encoder_cosine_newyork.ipynb
+++ b/USE_encoder_cosine_newyork.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6600/6600 [00:00<00:00, 109310.34it/s]\n"
+      "100%|██████████| 148/148 [00:00<00:00, 25957.89it/s]\n"
      ]
     }
    ],
@@ -84,16 +84,18 @@
     "articles_title = []\n",
     "articles_id = []\n",
     "\n",
-    "for article_id, title, text in tqdm(data_articles):\n",
+    "for article_url, article_page_title, article_main_passage, table_url in tqdm(data_articles):\n",
     "    \n",
-    "    articles_id.append(article_id)\n",
+    "    catch = article_page_title +\" \"+article_main_passage\n",
     "    \n",
-    "    articles_title.append(title)"
+    "    articles_id.append(table_url)\n",
+    "    \n",
+    "    articles_title.append(catch[:1000])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,16 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6600"
+       "148"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,6 +153,20 @@
    "source": [
     "len(article_dense_vector)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -168,14 +184,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 298793/298793 [00:00<00:00, 356276.52it/s]\n"
+      "100%|██████████| 52426/52426 [00:00<00:00, 185797.49it/s]\n"
      ]
     }
    ],
@@ -184,12 +200,25 @@
     "\n",
     "for current_table in tqdm(data_tables):\n",
     "    \n",
-    "    tables_title.append(str(current_table[1]))"
+    "    table_title = str(current_table[1])\n",
+    "    \n",
+    "    table_page_content = str(current_table[2])\n",
+    "    \n",
+    "    catch = str(current_table[1])+\" \"+str(current_table[2])\n",
+    "    \n",
+    "    tables_title.append(catch[:1000])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,16 +259,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "298793"
+       "52426"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,6 +344,10 @@
     "    if k == 1:\n",
     "            \n",
     "        average_top1.append(accuracy)\n",
+    "        \n",
+    "    if k == 5:\n",
+    "            \n",
+    "        average_top5.append(accuracy)\n",
     "        \n",
     "    if k == 10:\n",
     "            \n",
@@ -345,30 +378,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 39%|███▊      | 2557/6600 [2:13:37<3:32:08,  3.15s/it]"
+      "100%|██████████| 148/148 [01:01<00:00,  2.42it/s]\n"
      ]
     }
    ],
    "source": [
     "average_top1 = []\n",
+    "average_top5 = []\n",
     "average_top10 = []\n",
     "average_top100 = []\n",
     "average_top1000 = []\n",
     "\n",
-    "top_k = [1,10,100,1000]\n",
+    "top_k = [5]\n",
     "\n",
     "for i in tqdm(range(len(article_dense_vector))):\n",
     "    \n",
     "    distance_vector = pairwise_distances(article_dense_vector[i].reshape(1,512), tables_dense_vector, metric='cosine')\n",
     "    \n",
-    "    id_query_goal = int(articles_id[i])\n",
+    "    id_query_goal = articles_id[i]\n",
     "    \n",
     "    for accuracy_k in top_k:\n",
     "        \n",
@@ -386,14 +420,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nan\n",
+      "0.4662\n",
+      "nan\n",
+      "nan\n",
+      "nan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lss9/anaconda3/envs/virtual_env/lib/python3.7/site-packages/numpy/core/fromnumeric.py:3257: RuntimeWarning: Mean of empty slice.\n",
+      "  out=out, **kwargs)\n",
+      "/home/lss9/anaconda3/envs/virtual_env/lib/python3.7/site-packages/numpy/core/_methods.py:161: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  ret = ret.dtype.type(ret / rcount)\n"
+     ]
+    }
+   ],
    "source": [
-    "print(str(round(np.mean(average_top1),4))+\" (±) \"+str(round(np.std(average_top1),4)))\n",
-    "print(str(round(np.mean(average_top10),4))+\" (±) \"+str(round(np.std(average_top10),4)))\n",
-    "print(str(round(np.mean(average_top100),4))+\" (±) \"+str(round(np.std(average_top100),4)))\n",
-    "print(str(round(np.mean(average_top1000),4))+\" (±) \"+str(round(np.std(average_top1000),4)))"
+    "print(str(round(np.mean(average_top1),4)))\n",
+    "print(str(round(np.mean(average_top5),4)))\n",
+    "print(str(round(np.mean(average_top10),4)))\n",
+    "print(str(round(np.mean(average_top100),4)))\n",
+    "print(str(round(np.mean(average_top1000),4)))"
    ]
   }
  ],
