--- a/data_analysis/article_analysis2.ipynb
+++ b/data_analysis/article_analysis2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,6 +604,77 @@
     "        row = i\n",
     "         \n",
     "        wr.writerow(row) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 275353/275353 [00:00<00:00, 1589061.75it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "title_char_lenght = []\n",
+    "\n",
+    "for articles in tqdm(data_articles):\n",
+    "    \n",
+    "    title = str(articles[1])\n",
+    "    \n",
+    "    lenght_char_title = len(title)\n",
+    "    \n",
+    "    title_char_lenght.append(lenght_char_title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "title analysis:\n",
+      "max char = 194\n",
+      "min char = 3\n",
+      "avg char = 41.42564998383893\n",
+      "std char = 20.651694033849846\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('title analysis:')\n",
+    "print(\"max char = \"+str(np.max(title_char_lenght)))\n",
+    "print(\"min char = \"+str(np.min(title_char_lenght)))\n",
+    "print(\"avg char = \"+str(np.mean(title_char_lenght)))\n",
+    "print(\"std char = \"+str(np.std(title_char_lenght)))"
    ]
   },
   {
