--- a/data_analysis/table_analysis.ipynb
+++ b/data_analysis/table_analysis.ipynb
@@ -435,6 +435,84 @@
     "print(\"avg words = \"+str(np.mean(catch_all_leght)))\n",
     "print(\"std words = \"+str(np.std(catch_all_leght)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 298793/298793 [00:00<00:00, 1467704.31it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "title_char_lenght = []\n",
+    "\n",
+    "for tables in tqdm(data_tables):\n",
+    "    \n",
+    "    title = str(tables[1])\n",
+    "    \n",
+    "    lenght_char_title = len(title)\n",
+    "    \n",
+    "    title_char_lenght.append(lenght_char_title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "title analysis:\n",
+      "max char = 123\n",
+      "min char = 1\n",
+      "avg char = 24.691170810561157\n",
+      "std char = 12.72121093967286\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('title analysis:')\n",
+    "print(\"max char = \"+str(np.max(title_char_lenght)))\n",
+    "print(\"min char = \"+str(np.min(title_char_lenght)))\n",
+    "print(\"avg char = \"+str(np.mean(title_char_lenght)))\n",
+    "print(\"std char = \"+str(np.std(title_char_lenght)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
