--- a/elastic_search.ipynb
+++ b/elastic_search.ipynb
@@ -12,7 +12,7 @@
     "import random\n",
     "from elasticsearch import Elasticsearch\n",
     "from elasticsearch import helpers\n",
-    "indexingTables = Elasticsearch()"
+    "indexingTables = Elasticsearch(timeout=30, max_retries=10, retry_on_timeout=True)"
    ]
   },
   {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,8 @@
     "            \"multi_match\":{\n",
     "              \"type\": \"most_fields\",\n",
     "              \"query\":    query, \n",
-    "              \"fields\": [\"tablePgTitle\",\"tableHeader\",\"tableBody\"] \n",
+    "              \"fields\": [\"tablePgTitle\"] \n",
+    "              #\"fields\": [\"tablePgTitle\",\"tableHeader\",\"tableBody\"] \n",
     "              #\"fields\": [tableField]\n",
     "            }\n",
     "        }\n",
@@ -86,17 +87,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "articles = pd.read_csv('dataset/test_dataset', delimiter=',', header=None)\n",
+    "articles = pd.read_csv('dataset/test_dataset_all_articles', delimiter=',', header=None)\n",
     "formattedArticles = articles.iloc[:,:].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,14 +105,15 @@
     "\n",
     "    accuracy = []\n",
     "\n",
-    "    for articles in (formattedArticles):\n",
+    "    for articles in (formattedArticles[0:50]):\n",
     "    \n",
     "        articl_key = articles[0]\n",
     "        article_title = str(articles[1])\n",
-    "        article_full_text = str(articles[2])\n",
+    "        article_full_text = str(articles[2][0:6000])\n",
     "        article_meta_description = str(articles[3])\n",
     "        article_summary = str(articles[4])\n",
     "        keywords = str(articles[5])\n",
+    "        \n",
     "        catch = article_title +\" \"+article_meta_description+\" \"+keywords\n",
     "        \n",
     "        result = searchIndexing(catch,tableField,topK)\n",
@@ -124,26 +126,110 @@
     "    \n",
     "            idRankedTables.append(tablePgId)\n",
     "    \n",
-    "        accuracy.append(getAccuracy(idRankedTables,articl_key))\n",
+    "        accuracy.append(get_accuracy(idRankedTables,articl_key))\n",
     "\n",
     "    print(str(round(np.mean(accuracy),4)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "tableField = [\"tablePgTitle\",\"tableSectionTitle\",\"tableCaption\",\"tableHeader\",\"tableBody\"]\n",
-    "topK = [1,10,20,50,100,1000]"
+    "topK = [1,5,10,20,50,100,1000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Acc@1 - tablePgTitle\n",
+      "0.34\n",
+      "Acc@1 - tableSectionTitle\n",
+      "0.34\n",
+      "Acc@1 - tableCaption\n",
+      "0.34\n",
+      "Acc@1 - tableHeader\n",
+      "0.34\n",
+      "Acc@1 - tableBody\n",
+      "0.34\n",
+      "\n",
+      "Acc@5 - tablePgTitle\n",
+      "0.44\n",
+      "Acc@5 - tableSectionTitle\n",
+      "0.44\n",
+      "Acc@5 - tableCaption\n",
+      "0.44\n",
+      "Acc@5 - tableHeader\n",
+      "0.44\n",
+      "Acc@5 - tableBody\n",
+      "0.44\n",
+      "\n",
+      "Acc@10 - tablePgTitle\n",
+      "0.5\n",
+      "Acc@10 - tableSectionTitle\n",
+      "0.5\n",
+      "Acc@10 - tableCaption\n",
+      "0.5\n",
+      "Acc@10 - tableHeader\n",
+      "0.5\n",
+      "Acc@10 - tableBody\n",
+      "0.5\n",
+      "\n",
+      "Acc@20 - tablePgTitle\n",
+      "0.52\n",
+      "Acc@20 - tableSectionTitle\n",
+      "0.52\n",
+      "Acc@20 - tableCaption\n",
+      "0.52\n",
+      "Acc@20 - tableHeader\n",
+      "0.52\n",
+      "Acc@20 - tableBody\n",
+      "0.52\n",
+      "\n",
+      "Acc@50 - tablePgTitle\n",
+      "0.58\n",
+      "Acc@50 - tableSectionTitle\n",
+      "0.58\n",
+      "Acc@50 - tableCaption\n",
+      "0.58\n",
+      "Acc@50 - tableHeader\n",
+      "0.58\n",
+      "Acc@50 - tableBody\n",
+      "0.58\n",
+      "\n",
+      "Acc@100 - tablePgTitle\n",
+      "0.62\n",
+      "Acc@100 - tableSectionTitle\n",
+      "0.62\n",
+      "Acc@100 - tableCaption\n",
+      "0.62\n",
+      "Acc@100 - tableHeader\n",
+      "0.62\n",
+      "Acc@100 - tableBody\n",
+      "0.62\n",
+      "\n",
+      "Acc@1000 - tablePgTitle\n",
+      "0.7\n",
+      "Acc@1000 - tableSectionTitle\n",
+      "0.7\n",
+      "Acc@1000 - tableCaption\n",
+      "0.7\n",
+      "Acc@1000 - tableHeader\n",
+      "0.7\n",
+      "Acc@1000 - tableBody\n",
+      "0.7\n"
+     ]
+    }
+   ],
    "source": [
     "for k in topK:\n",
     "    \n",
@@ -158,9 +244,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acc@1\n",
+      "0.34\n",
+      "Acc@5\n",
+      "0.44\n",
+      "Acc@10\n",
+      "0.5\n",
+      "Acc@20\n",
+      "0.52\n",
+      "Acc@50\n",
+      "0.58\n",
+      "Acc@100\n",
+      "0.62\n",
+      "Acc@1000\n",
+      "0.7\n"
+     ]
+    }
+   ],
    "source": [
     "for k in topK:\n",
     "    \n",
@@ -168,6 +275,34 @@
     "    \n",
     "    executeSearch(\"\",k)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
