--- a/siamese_network_RNN.ipynb
+++ b/siamese_network_RNN.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_file = pd.read_csv('dataset/trainDataset', delimiter=',', header=None)\n",
+    "read_file = pd.read_csv('dataset/new_train_dataset_1_5', delimiter=',', header=None)\n",
     "train_dataset = read_file.iloc[:,:].values"
    ]
   },
@@ -33,9 +33,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_file = pd.read_csv('dataset/validationDataset', delimiter=',', header=None)\n",
+    "read_file = pd.read_csv('dataset/new_validation_dataset_1_5', delimiter=',', header=None)\n",
     "validation_dataset = read_file.iloc[:,:].values"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -43,26 +50,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_file = pd.read_csv('dataset/testDataset', delimiter=',', header=None)\n",
-    "test_dataset = read_file.iloc[:,:].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def sequence_padding(X_DIM, value):\n",
     "    \n",
-    "    value_padding = np.pad(value, ((0,12 - X_DIM),(0,0)), 'constant')\n",
+    "    value_padding = np.pad(value, ((0,9 - X_DIM),(0,0)), 'constant')\n",
     "    \n",
     "    return value_padding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,22 +79,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 316183/316183 [00:53<00:00, 5863.66it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "left_train = []\n",
+    "rigth_train = []\n",
+    "label = []\n",
+    "\n",
+    "for articleID, articleTitle, tableID, tableTitle, match in tqdm(train_dataset):\n",
+    "    \n",
+    "    value1 = tknzr.tokenize(str(articleTitle))\n",
+    "    \n",
+    "    if len(value1) < 9:\n",
+    "        \n",
+    "        embedding1 = embedding_model.wv[value1]\n",
+    "        padding_embedding1 = sequence_padding(embedding1.shape[0],embedding1)\n",
+    "        left_train.append(padding_embedding1)\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        embedding1 = embedding_model.wv[value1[0:9]]\n",
+    "        left_train.append(embedding1)\n",
+    "    \n",
+    "    \n",
+    "    value2 = tknzr.tokenize(str(tableTitle))\n",
+    "    \n",
+    "    if len(value2) < 9:\n",
+    "        \n",
+    "        embedding2 = embedding_model.wv[value2]\n",
+    "        padding_embedding2 = sequence_padding(embedding2.shape[0],embedding2)\n",
+    "        rigth_train.append(padding_embedding2)\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        embedding2 = embedding_model.wv[value2[0:9]]\n",
+    "        rigth_train.append(embedding2)\n",
+    "    \n",
+    "    \n",
+    "    label.append(match)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# [0]articleID\n",
-    "# [1]articleTitle\n",
-    "# [2]articleText \n",
-    "\n",
-    "# [3]tableID \n",
-    "# [4]tableTitle\n",
-    "# [5]tableSectionTitle\n",
-    "# [6]tableCaption\n",
-    "# [7]tableHeader\n",
-    "# [8]tableBody\n",
-    "\n",
-    "# [9]match"
+    "left_train = np.array(left_train)\n",
+    "rigth_train = np.array(rigth_train)\n",
+    "label = np.array(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(316183,)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label.shape"
    ]
   },
   {
@@ -109,76 +175,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 112191/112191 [00:36<00:00, 3087.01it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "left_train = []\n",
-    "rigth_train = []\n",
-    "label = []\n",
-    "\n",
-    "for articleID, articleTitle, articleText, tableID, tableTitle, tableSectionTitle, tableCaption, tableHeader, tableBody, match in tqdm(train_dataset):\n",
-    "    \n",
-    "    value1 = tknzr.tokenize(str(articleTitle))\n",
-    "    \n",
-    "    if len(value1) < 12:\n",
-    "        \n",
-    "        embedding1 = embedding_model.wv[value1]\n",
-    "        padding_embedding1 = sequence_padding(embedding1.shape[0],embedding1)\n",
-    "        left_train.append(padding_embedding1)\n",
-    "    \n",
-    "    else:\n",
-    "        \n",
-    "        embedding1 = embedding_model.wv[value1[0:12]]\n",
-    "        left_train.append(embedding1)\n",
-    "    \n",
-    "    \n",
-    "    value2 = tknzr.tokenize(str(tableTitle))\n",
-    "    \n",
-    "    if len(value2) < 12:\n",
-    "        \n",
-    "        embedding2 = embedding_model.wv[value2]\n",
-    "        padding_embedding2 = sequence_padding(embedding2.shape[0],embedding2)\n",
-    "        rigth_train.append(padding_embedding2)\n",
-    "    \n",
-    "    else:\n",
-    "        \n",
-    "        embedding2 = embedding_model.wv[value2[0:12]]\n",
-    "        rigth_train.append(embedding2)\n",
-    "    \n",
-    "    \n",
-    "    label.append(match)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "left_train = np.array(left_train)\n",
-    "rigth_train = np.array(rigth_train)\n",
-    "label = np.array(label)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 6626/6626 [00:01<00:00, 3515.97it/s]\n"
+      "100%|██████████| 16623/16623 [00:02<00:00, 6108.92it/s]\n"
      ]
     }
    ],
@@ -187,11 +184,11 @@
     "rigth_validation = []\n",
     "label_validation = []\n",
     "\n",
-    "for articleID, articleTitle, articleText, tableID, tableTitle, tableSectionTitle, tableCaption, tableHeader, tableBody, match in tqdm(validation_dataset):\n",
+    "for articleID, articleTitle, tableID, tableTitle, match in tqdm(validation_dataset):\n",
     "    \n",
     "    value1 = tknzr.tokenize(str(articleTitle))\n",
     "    \n",
-    "    if len(value1) < 12:\n",
+    "    if len(value1) < 9:\n",
     "        \n",
     "        embedding1 = embedding_model.wv[value1]\n",
     "        padding_embedding1 = sequence_padding(embedding1.shape[0],embedding1)\n",
@@ -199,13 +196,13 @@
     "    \n",
     "    else:\n",
     "        \n",
-    "        embedding1 = embedding_model.wv[value1[0:12]]\n",
+    "        embedding1 = embedding_model.wv[value1[0:9]]\n",
     "        left_validation.append(embedding1)\n",
     "    \n",
     "    \n",
     "    value2 = tknzr.tokenize(str(tableTitle))\n",
     "    \n",
-    "    if len(value2) < 12:\n",
+    "    if len(value2) < 9:\n",
     "        \n",
     "        embedding2 = embedding_model.wv[value2]\n",
     "        padding_embedding2 = sequence_padding(embedding2.shape[0],embedding2)\n",
@@ -213,7 +210,7 @@
     "    \n",
     "    else:\n",
     "        \n",
-    "        embedding2 = embedding_model.wv[value2[0:12]]\n",
+    "        embedding2 = embedding_model.wv[value2[0:9]]\n",
     "        rigth_validation.append(embedding2)\n",
     "    \n",
     "    \n",
@@ -222,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,83 +230,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 13227/13227 [00:04<00:00, 3301.04it/s]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(16623,)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "left_test = []\n",
-    "rigth_test = []\n",
-    "label_test = []\n",
-    "\n",
-    "for articleID, articleTitle, articleText, tableID, tableTitle, tableSectionTitle, tableCaption, tableHeader, tableBody, match in tqdm(test_dataset):\n",
-    "    \n",
-    "    value1 = tknzr.tokenize(str(articleTitle))\n",
-    "    \n",
-    "    if len(value1) < 12:\n",
-    "        \n",
-    "        embedding1 = embedding_model.wv[value1]\n",
-    "        padding_embedding1 = sequence_padding(embedding1.shape[0],embedding1)\n",
-    "        left_test.append(padding_embedding1)\n",
-    "    \n",
-    "    else:\n",
-    "        \n",
-    "        embedding1 = embedding_model.wv[value1[0:12]]\n",
-    "        left_test.append(embedding1)\n",
-    "    \n",
-    "    \n",
-    "    value2 = tknzr.tokenize(str(tableTitle))\n",
-    "    \n",
-    "    if len(value2) < 12:\n",
-    "        \n",
-    "        embedding2 = embedding_model.wv[value2]\n",
-    "        padding_embedding2 = sequence_padding(embedding2.shape[0],embedding2)\n",
-    "        rigth_test.append(padding_embedding2)\n",
-    "    \n",
-    "    else:\n",
-    "        \n",
-    "        embedding2 = embedding_model.wv[value2[0:12]]\n",
-    "        rigth_test.append(embedding2)\n",
-    "    \n",
-    "    \n",
-    "    label_test.append(match)"
+    "label_validation.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "left_test = np.array(left_test)\n",
-    "rigth_test = np.array(rigth_test)\n",
-    "label_test = np.array(label_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,18 +267,16 @@
     "    model.add(tf.keras.layers.BatchNormalization())\n",
     "    model.add(tf.keras.layers.SimpleRNN(64, activation='relu',  dropout=0.2, return_sequences=True))\n",
     "    model.add(tf.keras.layers.BatchNormalization())\n",
-    "    model.add(tf.keras.layers.SimpleRNN(128, activation='relu', dropout=0.2, return_sequences=True))\n",
-    "    model.add(tf.keras.layers.MaxPooling1D())\n",
-    "    model.add(tf.keras.layers.BatchNormalization())\n",
+    "    #model.add(tf.keras.layers.SimpleRNN(128, activation='relu', dropout=0.2, return_sequences=True))\n",
+    "    #model.add(tf.keras.layers.MaxPooling1D())\n",
+    "    #model.add(tf.keras.layers.BatchNormalization())\n",
     "    model.add(tf.keras.layers.Flatten())\n",
-    "    model.add(tf.keras.layers.Dense(512, activation='sigmoid'))\n",
+    "    model.add(tf.keras.layers.Dense(64, activation='sigmoid'))\n",
     "    \n",
     "    left_encoded = model(left)\n",
     "    right_encoded = model(right)\n",
     "    \n",
-    "    L1_layer = tf.keras.layers.Lambda(lambda tensors:tf.keras.backend.abs(tensors[0] - tensors[1]))\n",
-    "    \n",
-    "    L1_distance = L1_layer([left_encoded, right_encoded])\n",
+    "    L1_distance = tf.keras.layers.dot([left_encoded,right_encoded], axes=1, normalize=True)\n",
     "    \n",
     "    prediction = tf.keras.layers.Dense(1,activation='sigmoid')(L1_distance)\n",
     "    \n",
@@ -348,16 +287,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = siamese_model((12,300))"
+    "model = siamese_model((9,300))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,39 +305,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 112191 samples, validate on 6626 samples\n",
+      "Train on 316183 samples, validate on 16623 samples\n",
       "Epoch 1/10\n",
-      "WARNING:tensorflow:From /home/lss9/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/ops/nn_impl.py:183: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-      "WARNING:tensorflow:Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7ff18d168d08> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
-      "WARNING: Entity <function Function._initialize_uninitialized_variables.<locals>.initialize_variables at 0x7ff18d168d08> could not be transformed and will be executed as-is. Please report this to the AutoGraph team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output. Cause: module 'gast' has no attribute 'Num'\n",
-      "112191/112191 [==============================] - 138s 1ms/sample - loss: 0.5522 - accuracy: 0.7004 - val_loss: 0.5084 - val_accuracy: 0.7308\n",
+      "316183/316183 [==============================] - 95s 302us/sample - loss: 0.3502 - accuracy: 0.8761 - val_loss: 1.5696 - val_accuracy: 0.1989\n",
       "Epoch 2/10\n",
-      "112191/112191 [==============================] - 133s 1ms/sample - loss: 0.4951 - accuracy: 0.7447 - val_loss: 0.5459 - val_accuracy: 0.7019\n",
+      "316183/316183 [==============================] - 90s 286us/sample - loss: 0.2474 - accuracy: 0.9113 - val_loss: 1.7316 - val_accuracy: 0.2002\n",
       "Epoch 3/10\n",
-      "112191/112191 [==============================] - 128s 1ms/sample - loss: 0.4785 - accuracy: 0.7545 - val_loss: 0.4750 - val_accuracy: 0.7585\n",
+      "316183/316183 [==============================] - 90s 285us/sample - loss: 0.2344 - accuracy: 0.9151 - val_loss: 1.3330 - val_accuracy: 0.3390\n",
       "Epoch 4/10\n",
-      "112191/112191 [==============================] - 128s 1ms/sample - loss: 0.4692 - accuracy: 0.7623 - val_loss: 0.5391 - val_accuracy: 0.6968\n",
+      "316183/316183 [==============================] - 90s 285us/sample - loss: 0.2268 - accuracy: 0.9172 - val_loss: 1.7821 - val_accuracy: 0.2078\n",
       "Epoch 5/10\n",
-      "112191/112191 [==============================] - 129s 1ms/sample - loss: 0.4652 - accuracy: 0.7643 - val_loss: 0.4840 - val_accuracy: 0.7404\n",
+      "316183/316183 [==============================] - 90s 284us/sample - loss: 0.2209 - accuracy: 0.9193 - val_loss: 1.4700 - val_accuracy: 0.2592\n",
       "Epoch 6/10\n",
-      "112191/112191 [==============================] - 131s 1ms/sample - loss: 0.4601 - accuracy: 0.7680 - val_loss: 0.4733 - val_accuracy: 0.7548\n",
+      "316183/316183 [==============================] - 90s 284us/sample - loss: 0.2187 - accuracy: 0.9195 - val_loss: 1.2960 - val_accuracy: 0.3864\n",
       "Epoch 7/10\n",
-      "112191/112191 [==============================] - 108s 960us/sample - loss: 0.4557 - accuracy: 0.7714 - val_loss: 0.5046 - val_accuracy: 0.7369\n",
+      "316183/316183 [==============================] - 90s 285us/sample - loss: 0.2157 - accuracy: 0.9206 - val_loss: 1.4908 - val_accuracy: 0.2580\n",
       "Epoch 8/10\n",
-      "112191/112191 [==============================] - 133s 1ms/sample - loss: 0.4536 - accuracy: 0.7718 - val_loss: 0.4487 - val_accuracy: 0.7661\n",
+      "316183/316183 [==============================] - 90s 285us/sample - loss: 0.2132 - accuracy: 0.9213 - val_loss: 0.7845 - val_accuracy: 0.6433\n",
       "Epoch 9/10\n",
-      "112191/112191 [==============================] - 126s 1ms/sample - loss: 0.4504 - accuracy: 0.7743 - val_loss: 0.4685 - val_accuracy: 0.7576\n",
+      "316183/316183 [==============================] - 90s 285us/sample - loss: 0.2113 - accuracy: 0.9219 - val_loss: 1.0034 - val_accuracy: 0.5043\n",
       "Epoch 10/10\n",
-      "112191/112191 [==============================] - 131s 1ms/sample - loss: 0.4475 - accuracy: 0.7763 - val_loss: 0.4634 - val_accuracy: 0.7578\n"
+      "316183/316183 [==============================] - 90s 285us/sample - loss: 0.2099 - accuracy: 0.9224 - val_loss: 1.6256 - val_accuracy: 0.3036\n"
      ]
     }
    ],
@@ -411,10 +345,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.save('model_siamese_rnn.h5')"
+   ]
   },
   {
    "cell_type": "code",
