--- a/table_retrieval_newyork.ipynb
+++ b/table_retrieval_newyork.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
     "from elasticsearch import helpers\n",
     "from nltk.tokenize import TweetTokenizer\n",
     "tknzr = TweetTokenizer()\n",
-    "indexing_tables = Elasticsearch()\n",
+    "indexing_tables = Elasticsearch(timeout=30, max_retries=10, retry_on_timeout=True)\n",
     "import tensorflow as tf\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -23,26 +23,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.0.0-rc0'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tf.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_articles = pd.read_csv('dataset/test_dataset_all_articles', delimiter=',', header=None)\n",
+    "raw_articles = pd.read_csv('dataset/article_data_newyork', delimiter=',', header=None)\n",
     "data_articles = raw_articles.iloc[:,:].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,34 +62,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'acknowledged': True, 'shards_acknowledged': True}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "indexing_tables.indices.close(index='tables')\n",
-    "indexing_tables.indices.put_settings(index='tables', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"classic\"}}}})\n",
-    "indexing_tables.indices.open(index='tables')"
+    "indexing_tables.indices.close(index='data_table_newyork')\n",
+    "indexing_tables.indices.put_settings(index='data_table_newyork', body={\"index\": {\"similarity\": {\"default\": {\"type\": \"classic\"}}}})\n",
+    "indexing_tables.indices.open(index='data_table_newyork')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def search_indexing(query):\n",
     "    \n",
     "    result= indexing_tables.search(\n",
-    "        index=\"tables\", \n",
+    "        index=\"data_table_newyork\", \n",
     "        body = {\n",
-    "        \"_source\": [\"tablePgID\",\"tablePgTitle\"],\n",
+    "        \"_source\": [\"table_url\",\"table_page_title\"],\n",
     "        \"from\" : 0,\n",
     "        \"size\" : 1000,\n",
     "        \"query\": {\n",
     "            \"multi_match\":{\n",
     "              \"type\": \"most_fields\",\n",
     "              \"query\":    query, \n",
-    "              \"fields\": [\"tablePgTitle\",\"tableHeader\",\"tableBody\"] \n",
+    "              \"fields\": [\"table_page_title\"] \n",
     "            }\n",
     "        }\n",
     "    })\n",
@@ -88,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,17 +124,17 @@
     "    \n",
     "            accuracy = 1\n",
     "            break;\n",
-    "\n",
+    "            \n",
     "    return accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_PAD = 40\n",
+    "MAX_PAD = 9\n",
     "\n",
     "def sequence_padding(X_DIM, value):\n",
     "    \n",
@@ -123,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,9 +182,9 @@
     "        \n",
     "    for hit in result_index['hits']['hits']:\n",
     "    \n",
-    "        table_ID = hit['_source']['tablePgID']\n",
+    "        table_ID = hit['_source']['table_url']\n",
     "        \n",
-    "        table_page_title = hit['_source']['tablePgTitle']\n",
+    "        table_page_title = hit['_source']['table_page_title']\n",
     "    \n",
     "        tables_index.append([table_ID,table_page_title])\n",
     "    \n",
@@ -171,16 +193,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ranking_model = tf.keras.models.load_model('attention_model.h5')"
+    "ranking_model = tf.keras.models.load_model('affinity_model_ramdom_1_1.h5')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,33 +220,30 @@
     "    TOP_K = k\n",
     "    accuracy = []\n",
     "    \n",
-    "    for article_ID, article_title, article_text, meta_description, summary, keywords, meta_keywords, tags in tqdm(data_articles[0:50]):\n",
+    "    for row_article in tqdm(data_articles):\n",
     "    \n",
     "        article_title = []\n",
-    "        article_description = []\n",
     "        title_table = []\n",
     "        ranked_tables_model = []\n",
     "    \n",
-    "        catch = str(article_title)+\" \"+str(meta_description)+\" \"+str(keywords)\n",
+    "        article_ID = row_article[3]\n",
+    "        article_title_text = str(row_article[1])\n",
     "        \n",
-    "        ranked_tables_index = search_index(catch)\n",
+    "        ranked_tables_index = search_index(article_title_text)\n",
     "        \n",
-    "        article_title_embedding = create_embedding(article_title)\n",
-    "        article_descr_embedding = create_embedding(meta_description)\n",
+    "        article_title_embedding = create_embedding(article_title_text)\n",
     "        \n",
     "        for table_ID, table_title in (ranked_tables_index):\n",
     "        \n",
     "            table_title_embedding = create_embedding(str(table_title))\n",
     "            \n",
     "            article_title.append(article_title_embedding)\n",
-    "            article_description.append(article_descr_embedding)\n",
     "            title_table.append(table_title_embedding)\n",
     "    \n",
     "        article_title = np.array(article_title)\n",
-    "        article_description = np.array(article_description)\n",
     "        title_table = np.array(title_table)\n",
     "    \n",
-    "        table_ranking_model = ranking_model.predict([article_title, article_description,title_table])\n",
+    "        table_ranking_model = ranking_model.predict([article_title,title_table])\n",
     "    \n",
     "        for i in range(0,len(table_ranking_model)):\n",
     "        \n",
@@ -238,11 +264,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 148/148 [00:24<00:00,  5.00it/s]\n",
+      "100%|██████████| 148/148 [00:24<00:00,  5.05it/s]\n",
+      "100%|██████████| 148/148 [00:25<00:00,  5.09it/s]\n",
+      "100%|██████████| 148/148 [00:24<00:00,  5.07it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "accuracy_K = [1,10,20,50,100]\n",
+    "accuracy_K = [1,5,10,100]\n",
     "\n",
     "for k in accuracy_K:\n",
     "     \n",
@@ -251,9 +288,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Acc@1', '0.1757'],\n",
+       " ['Acc@5', '0.3446'],\n",
+       " ['Acc@10', '0.4257'],\n",
+       " ['Acc@100', '0.6689']]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result"
    ]
