--- a/pre_trained_BERT_newyork.ipynb
+++ b/pre_trained_BERT_newyork.ipynb
@@ -4,15 +4,26 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.15.0'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
-    "import tensorflow_hub as hub\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "from sklearn.metrics import pairwise_distances\n",
-    "from heapq import nsmallest"
+    "from heapq import nsmallest\n",
+    "tf.__version__"
    ]
   },
   {
@@ -21,21 +32,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "module_url = \"https://tfhub.dev/google/universal-sentence-encoder/2\""
+    "from bert_serving.client import BertClient\n",
+    "bc = BertClient()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "embed = hub.Module(module_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,22 +64,15 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## creating the articles embedings"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6600/6600 [00:00<00:00, 109310.34it/s]\n"
+      "100%|██████████| 148/148 [00:00<00:00, 160901.24it/s]\n"
      ]
     }
    ],
@@ -84,44 +80,27 @@
     "articles_title = []\n",
     "articles_id = []\n",
     "\n",
-    "for article_id, title, text in tqdm(data_articles):\n",
+    "for article_url, article_page_title, article_main_passage, table_url in tqdm(data_articles):\n",
     "    \n",
-    "    articles_id.append(article_id)\n",
+    "    catch = article_page_title +\" \"+article_main_passage\n",
     "    \n",
-    "    articles_title.append(title)"
+    "    articles_id.append(table_url)\n",
+    "    \n",
+    "    articles_title.append(catch[:1000])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with tf.Session() as sess:\n",
-    "    \n",
-    "    sess.run([tf.global_variables_initializer(), tf.tables_initializer()])\n",
-    "            \n",
-    "    embedding_articles = sess.run(embed(articles_title))"
+    "embedding_articles = bc.encode(articles_title)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,16 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6600"
+       "148"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,28 +133,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bundesliga top scorers'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## creating the tables embeddings"
+    "data_tables[0][1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 298793/298793 [00:00<00:00, 356276.52it/s]\n"
+      "100%|██████████| 52426/52426 [00:00<00:00, 319240.44it/s]\n"
      ]
     }
    ],
@@ -184,40 +169,27 @@
     "\n",
     "for current_table in tqdm(data_tables):\n",
     "    \n",
-    "    tables_title.append(str(current_table[1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
-     ]
-    }
-   ],
-   "source": [
-    "with tf.Session() as sess:\n",
+    "    table_title = str(current_table[1])\n",
     "    \n",
-    "    sess.run([tf.global_variables_initializer(), tf.tables_initializer()])\n",
-    "            \n",
-    "    embedding_tables = sess.run(embed(tables_title))"
+    "    table_page_content = str(current_table[2])\n",
+    "    \n",
+    "    catch = str(current_table[1])+\" \"+str(current_table[2])\n",
+    "    \n",
+    "    tables_title.append(catch[:1000])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_tables = bc.encode(tables_title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,16 +202,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "298793"
+       "52426"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,15 +228,15 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "## methods for getting the ranked tables and save the accuracy"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,6 +287,10 @@
     "    if k == 1:\n",
     "            \n",
     "        average_top1.append(accuracy)\n",
+    "        \n",
+    "    if k == 5:\n",
+    "            \n",
+    "        average_top5.append(accuracy)\n",
     "        \n",
     "    if k == 10:\n",
     "            \n",
@@ -331,44 +307,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## computing the cosine similarity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 39%|███▊      | 2557/6600 [2:13:37<3:32:08,  3.15s/it]"
+      "100%|██████████| 148/148 [02:06<00:00,  1.17it/s]\n"
      ]
     }
    ],
    "source": [
     "average_top1 = []\n",
+    "average_top5 = []\n",
     "average_top10 = []\n",
     "average_top100 = []\n",
     "average_top1000 = []\n",
     "\n",
-    "top_k = [1,10,100,1000]\n",
+    "top_k = [1,10,5,100,1000]\n",
     "\n",
     "for i in tqdm(range(len(article_dense_vector))):\n",
     "    \n",
-    "    distance_vector = pairwise_distances(article_dense_vector[i].reshape(1,512), tables_dense_vector, metric='cosine')\n",
+    "    distance_vector = pairwise_distances(article_dense_vector[i].reshape(1,768), tables_dense_vector, metric='cosine')\n",
     "    \n",
-    "    id_query_goal = int(articles_id[i])\n",
+    "    id_query_goal = articles_id[i]\n",
     "    \n",
     "    for accuracy_k in top_k:\n",
     "        \n",
@@ -386,15 +349,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1486\n",
+      "0.2905\n",
+      "0.4527\n",
+      "0.6554\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str(round(np.mean(average_top1),4)))\n",
+    "print(str(round(np.mean(average_top5),4)))\n",
+    "print(str(round(np.mean(average_top10),4)))\n",
+    "print(str(round(np.mean(average_top100),4)))\n",
+    "print(str(round(np.mean(average_top1000),4)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(str(round(np.mean(average_top1),4))+\" (±) \"+str(round(np.std(average_top1),4)))\n",
-    "print(str(round(np.mean(average_top10),4))+\" (±) \"+str(round(np.std(average_top10),4)))\n",
-    "print(str(round(np.mean(average_top100),4))+\" (±) \"+str(round(np.std(average_top100),4)))\n",
-    "print(str(round(np.mean(average_top1000),4))+\" (±) \"+str(round(np.std(average_top1000),4)))"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -413,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
