--- a/siamese_network_LSTM.ipynb
+++ b/siamese_network_LSTM.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_file = pd.read_csv('dataset/trainDataset1_1', delimiter=',', header=None)\n",
+    "read_file = pd.read_csv('dataset/new_train_dataset_1_5', delimiter=',', header=None)\n",
     "train_dataset = read_file.iloc[:,:].values"
    ]
   },
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_file = pd.read_csv('dataset/validationDataset1_1', delimiter=',', header=None)\n",
+    "read_file = pd.read_csv('dataset/new_validation_dataset_1_5', delimiter=',', header=None)\n",
     "validation_dataset = read_file.iloc[:,:].values"
    ]
   },
@@ -43,19 +43,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_file = pd.read_csv('dataset/testDataset1_1', delimiter=',', header=None)\n",
-    "test_dataset = read_file.iloc[:,:].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def sequence_padding(X_DIM, value):\n",
     "    \n",
-    "    value_padding = np.pad(value, ((0,15 - X_DIM),(0,0)), 'constant')\n",
+    "    value_padding = np.pad(value, ((0,9 - X_DIM),(0,0)), 'constant')\n",
     "    \n",
     "    return value_padding"
    ]
@@ -69,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -109,14 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 112191/112191 [01:09<00:00, 1611.32it/s]\n"
+      "100%|██████████| 316183/316183 [00:54<00:00, 5853.96it/s]\n"
      ]
     }
    ],
@@ -125,11 +115,11 @@
     "rigth_train = []\n",
     "label = []\n",
     "\n",
-    "for articleID, articleTitle, articleText, tableID, tableTitle, tableSectionTitle, tableCaption, tableHeader, tableBody, match in tqdm(train_dataset):\n",
+    "for articleID, articleTitle, tableID, tableTitle, match in tqdm(train_dataset):\n",
     "    \n",
     "    value1 = tknzr.tokenize(str(articleTitle))\n",
     "    \n",
-    "    if len(value1) < 15:\n",
+    "    if len(value1) < 9:\n",
     "        \n",
     "        embedding1 = embedding_model.wv[value1]\n",
     "        padding_embedding1 = sequence_padding(embedding1.shape[0],embedding1)\n",
@@ -137,13 +127,13 @@
     "    \n",
     "    else:\n",
     "        \n",
-    "        embedding1 = embedding_model.wv[value1[0:15]]\n",
+    "        embedding1 = embedding_model.wv[value1[0:9]]\n",
     "        left_train.append(embedding1)\n",
     "    \n",
     "    \n",
     "    value2 = tknzr.tokenize(str(tableTitle))\n",
     "    \n",
-    "    if len(value2) < 15:\n",
+    "    if len(value2) < 9:\n",
     "        \n",
     "        embedding2 = embedding_model.wv[value2]\n",
     "        padding_embedding2 = sequence_padding(embedding2.shape[0],embedding2)\n",
@@ -151,7 +141,7 @@
     "    \n",
     "    else:\n",
     "        \n",
-    "        embedding2 = embedding_model.wv[value2[0:15]]\n",
+    "        embedding2 = embedding_model.wv[value2[0:9]]\n",
     "        rigth_train.append(embedding2)\n",
     "    \n",
     "    \n",
@@ -160,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,14 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6626/6626 [00:04<00:00, 1629.91it/s]\n"
+      "100%|██████████| 16623/16623 [00:02<00:00, 6047.94it/s]\n"
      ]
     }
    ],
@@ -194,11 +184,11 @@
     "rigth_validation = []\n",
     "label_validation = []\n",
     "\n",
-    "for articleID, articleTitle, articleText, tableID, tableTitle, tableSectionTitle, tableCaption, tableHeader, tableBody, match in tqdm(validation_dataset):\n",
+    "for articleID, articleTitle, tableID, tableTitle, match in tqdm(validation_dataset):\n",
     "    \n",
     "    value1 = tknzr.tokenize(str(articleTitle))\n",
     "    \n",
-    "    if len(value1) < 15:\n",
+    "    if len(value1) < 9:\n",
     "        \n",
     "        embedding1 = embedding_model.wv[value1]\n",
     "        padding_embedding1 = sequence_padding(embedding1.shape[0],embedding1)\n",
@@ -206,13 +196,13 @@
     "    \n",
     "    else:\n",
     "        \n",
-    "        embedding1 = embedding_model.wv[value1[0:15]]\n",
+    "        embedding1 = embedding_model.wv[value1[0:9]]\n",
     "        left_validation.append(embedding1)\n",
     "    \n",
     "    \n",
     "    value2 = tknzr.tokenize(str(tableTitle))\n",
     "    \n",
-    "    if len(value2) < 15:\n",
+    "    if len(value2) < 9:\n",
     "        \n",
     "        embedding2 = embedding_model.wv[value2]\n",
     "        padding_embedding2 = sequence_padding(embedding2.shape[0],embedding2)\n",
@@ -220,7 +210,7 @@
     "    \n",
     "    else:\n",
     "        \n",
-    "        embedding2 = embedding_model.wv[value2[0:15]]\n",
+    "        embedding2 = embedding_model.wv[value2[0:9]]\n",
     "        rigth_validation.append(embedding2)\n",
     "    \n",
     "    \n",
@@ -229,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,76 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 13227/13227 [00:08<00:00, 1600.14it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "left_test = []\n",
-    "rigth_test = []\n",
-    "label_test = []\n",
-    "\n",
-    "for articleID, articleTitle, articleText, tableID, tableTitle, tableSectionTitle, tableCaption, tableHeader, tableBody, match in tqdm(test_dataset):\n",
-    "    \n",
-    "    value1 = tknzr.tokenize(str(articleTitle))\n",
-    "    \n",
-    "    if len(value1) < 15:\n",
-    "        \n",
-    "        embedding1 = embedding_model.wv[value1]\n",
-    "        padding_embedding1 = sequence_padding(embedding1.shape[0],embedding1)\n",
-    "        left_test.append(padding_embedding1)\n",
-    "    \n",
-    "    else:\n",
-    "        \n",
-    "        embedding1 = embedding_model.wv[value1[0:15]]\n",
-    "        left_test.append(embedding1)\n",
-    "    \n",
-    "    \n",
-    "    value2 = tknzr.tokenize(str(tableTitle))\n",
-    "    \n",
-    "    if len(value2) < 15:\n",
-    "        \n",
-    "        embedding2 = embedding_model.wv[value2]\n",
-    "        padding_embedding2 = sequence_padding(embedding2.shape[0],embedding2)\n",
-    "        rigth_test.append(padding_embedding2)\n",
-    "    \n",
-    "    else:\n",
-    "        \n",
-    "        embedding2 = embedding_model.wv[value2[0:15]]\n",
-    "        rigth_test.append(embedding2)\n",
-    "    \n",
-    "    \n",
-    "    label_test.append(match)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "left_test = np.array(left_test)\n",
-    "rigth_test = np.array(rigth_test)\n",
-    "label_test = np.array(label_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,18 +248,18 @@
     "    \n",
     "    model = tf.keras.Sequential()\n",
     "    \n",
-    "    #model.add(tf.keras.layers.LSTM(16, activation='relu',  dropout=0.2, return_sequences=True))\n",
-    "    #model.add(tf.keras.layers.BatchNormalization())\n",
-    "    #model.add(tf.keras.layers.LSTM(32, activation='relu',  dropout=0.2, return_sequences=True))\n",
-    "    #model.add(tf.keras.layers.BatchNormalization())\n",
-    "    #model.add(tf.keras.layers.LSTM(64, activation='relu',  dropout=0.2, return_sequences=True))\n",
-    "    #model.add(tf.keras.layers.BatchNormalization())\n",
+    "    model.add(tf.keras.layers.LSTM(16, activation='relu',  dropout=0.2, return_sequences=True))\n",
+    "    model.add(tf.keras.layers.BatchNormalization())\n",
+    "    model.add(tf.keras.layers.LSTM(32, activation='relu',  dropout=0.2, return_sequences=True))\n",
+    "    model.add(tf.keras.layers.BatchNormalization())\n",
+    "    model.add(tf.keras.layers.LSTM(64, activation='relu',  dropout=0.2, return_sequences=True))\n",
+    "    model.add(tf.keras.layers.BatchNormalization())\n",
     "    #model.add(tf.keras.layers.LSTM(128, activation='relu', dropout=0.2, return_sequences=True))\n",
     "    #model.add(tf.keras.layers.BatchNormalization())\n",
-    "    model.add(tf.keras.layers.LSTM(256, activation='relu', dropout=0.2, return_sequences=True))\n",
-    "    model.add(tf.keras.layers.BatchNormalization())\n",
+    "    #model.add(tf.keras.layers.LSTM(256, activation='relu', dropout=0.2, return_sequences=True))\n",
+    "    #model.add(tf.keras.layers.BatchNormalization())\n",
     "    model.add(tf.keras.layers.Flatten())\n",
-    "    model.add(tf.keras.layers.Dense(256, activation='sigmoid'))\n",
+    "    model.add(tf.keras.layers.Dense(64, activation='sigmoid'))\n",
     "    \n",
     "    left_encoded = model(left)\n",
     "    right_encoded = model(right)\n",
@@ -354,25 +275,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#L1_distance = tf.keras.layers.dot([left_encoded,right_encoded], axes=1, normalize=True)"
+    "model = siamese_model((9,300))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = siamese_model((15,300))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,18 +298,18 @@
    "outputs": [],
    "source": [
     "history = model.fit([left_train, rigth_train], label, \n",
-    "          epochs=100, \n",
+    "          epochs=10, \n",
     "          batch_size=32, \n",
     "          validation_data=([left_validation, rigth_validation], label_validation))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save('siamese_LSTM_1_1.h5')"
+    "model.save('model_siamese_lstm.h5')"
    ]
   },
   {
@@ -532,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
